<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:navigationIconTint="?colorOnPrimary"
            app:title="@string/about_app_title"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.Material3.TitleSmall" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="64dp">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="32dp"
                android:contentDescription="@string/content_description_logo"
                android:src="@drawable/ic_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorOnBackground" />

            <TextView
                android:id="@+id/tv_app_version_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/about_app_version"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="?attr/colorOnBackground"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/iv_logo" />

            <TextView
                android:id="@+id/tv_app_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="?attr/colorOnBackground"
                app:layout_constraintTop_toBottomOf="@id/tv_app_version_label"
                tools:text="1.0" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_repo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="16dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintTop_toBottomOf="@id/tv_app_version">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_repo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/about_app_repo"
                        android:textColor="?attr/colorOnBackground"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/iv_github_logo"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_github_logo"
                        android:layout_width="52dp"
                        android:layout_height="52dp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/content_description_github_logo"
                        android:src="@drawable/ic_github"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_about_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/about_app_description"
                android:textColor="?attr/colorOnBackground"
                app:layout_constraintTop_toBottomOf="@id/card_repo" />

            <TextView
                android:id="@+id/tv_technologies_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/about_app_technologies_and_architecture"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="?attr/colorOnBackground"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_about_app" />

            <pl.atk.notes.presentation.screens.about.views.BulletTextView
                android:id="@+id/tv_clean_architecture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_technologies_label"
                app:text="@string/about_app_clean_architecture" />

            <pl.atk.notes.presentation.screens.about.views.BulletTextView
                android:id="@+id/tv_mvvm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_clean_architecture"
                app:text="@string/about_app_mvvm" />

            <pl.atk.notes.presentation.screens.about.views.BulletTextView
                android:id="@+id/tv_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_mvvm"
                app:text="@string/about_app_room" />

            <pl.atk.notes.presentation.screens.about.views.BulletTextView
                android:id="@+id/tv_hilt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_room"
                app:text="@string/about_app_hilt" />

            <pl.atk.notes.presentation.screens.about.views.BulletTextView
                android:id="@+id/tv_jetpack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_hilt"
                app:text="@string/about_app_jetpack" />

            <pl.atk.notes.presentation.screens.about.views.BulletTextView
                android:id="@+id/tv_view_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_jetpack"
                app:text="@string/about_app_view_model" />

            <pl.atk.notes.presentation.screens.about.views.BulletTextView
                android:id="@+id/tv_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_view_model"
                app:text="@string/about_app_navigation" />

            <pl.atk.notes.presentation.screens.about.views.BulletTextView
                android:id="@+id/tv_flow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_navigation"
                app:text="@string/about_app_coroutines_and_flow" />

            <TextView
                android:id="@+id/tv_testing_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/about_app_technologies_and_architecture"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="?attr/colorOnBackground"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_flow" />

            <TextView
                android:id="@+id/tv_testing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/about_app_testing_description"
                android:textColor="?attr/colorOnBackground"
                app:layout_constraintTop_toBottomOf="@id/tv_testing_label" />

            <pl.atk.notes.presentation.screens.about.views.BulletTextView
                android:id="@+id/tv_junit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_testing"
                app:text="@string/about_app_junit" />

            <pl.atk.notes.presentation.screens.about.views.BulletTextView
                android:id="@+id/tv_mockito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_junit"
                app:text="@string/about_app_mockito" />

            <pl.atk.notes.presentation.screens.about.views.BulletTextView
                android:id="@+id/tv_androidx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_mockito"
                app:text="@string/about_app_androidx_test" />

            <pl.atk.notes.presentation.screens.about.views.BulletTextView
                android:id="@+id/tv_kotlinx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_androidx"
                app:text="@string/about_app_kotlinx_test" />

            <pl.atk.notes.presentation.screens.about.views.BulletTextView
                android:id="@+id/tv_turbine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_kotlinx"
                app:text="@string/about_app_turbine" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>